--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ build-backend = "setuptools.build_meta"
 name = "pyjq"
 version = "2.6.0"
 description = "Binding for jq JSON processor."
+readme = "README.md"
+keyword = ["jq"]
 license = {text = "MIT License"}
 authors = [{ name = "Omoto Kenji" } ]
 classifiers = [
