--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,3 +28,6 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: "${{ matrix.python-version }}"
+    - run: apt-get install libjq-dev libonig-dev automake autoconf libtool git python3 cython3 python3-setuptools
+    - run: python3 setup.py build
+    - run: ls build/
