--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,8 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: "${{ matrix.python-version }}"
-    - run: sudo apt-get install pipenv libjq-dev libonig-dev automake autoconf libtool git python3 cython3 python3-setuptools
+    - run: sudo apt-get install python3-pip libjq-dev libonig-dev automake autoconf libtool gity python3 cython3 python3-setuptools
+    - run: pip3 install pipenv
     - run: pipenv install
     - run: python3 setup.py build
     - run: ls build/
