--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,5 +31,5 @@ jobs:
     - run: sudo apt-get install python3-pip libjq-dev libonig-dev automake autoconf libtool git python3 cython3 python3-setuptools
     - run: pip3 install pipenv
     - run: pipenv install
-    - run: python3 setup.py build
+    - run: pipenv run python3 setup.py build
     - run: ls build/
