Create new job for ARM build.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,26 @@ concurrency:
 
 jobs:
   build-chronoforge:
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, x64]
+    strategy:
+      matrix:
+        python-version: [3.11, 3.12]
+    steps:
+    # Checkout repo and setup python
+    - name: Checkout repository
+      uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      id: setup-python
+      uses: actions/setup-python@v5
+      with:
+        python-version: "${{ matrix.python-version }}"
+    - run: sudo apt-get install python3-pip libjq-dev libonig-dev automake autoconf libtool
+    - run: pip3 install pipenv
+    - run: pipenv install --dev
+    - run: pipenv run python3 setup.py build
+    - run: ls build/
+  build-arm:
+    runs-on: [ubuntu-latest, arm64-beta]
     strategy:
       matrix:
         python-version: [3.11, 3.12]
