--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ concurrency:
 
 jobs:
   build-chronoforge:
-    runs-on: [ubuntu-latest, x64]
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [3.11, 3.12]
@@ -34,7 +34,7 @@ jobs:
     - run: pipenv run python3 setup.py build
     - run: ls build/
   build-arm:
-    runs-on: [ubuntu-latest, arm64-beta]
+    runs-on: arm64-beta
     strategy:
       matrix:
         python-version: [3.11, 3.12]
