--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = [
-  "cython",
+  "cython <= 3.0.12",
   "setuptools >= 61.0",
 ]
 build-backend = "setuptools.build_meta"
